k8s/echo/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # (필요시)
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"               # 호스트명 (테스트용으로 localhost 사용)
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: echo-service
                port:
                  number: 80
